# bcachefs-tools

./: .bcachefs_revision  .editorconfig  .gitignore  Cargo.toml  INSTALL.md  Makefile  README.md  bcachefs  bcachefs.8  bcachefs.c  build.nix  build.rs  cmd_counters.c  cmd_data.c  cmd_device.c  cmd_dump.c  cmd_format.c  cmd_fs.c  cmd_fsck.c  cmd_fusemount.c  cmd_key.c  cmd_kill_btree_node.c  cmd_list_journal.c  cmd_migrate.c  cmds.h  flake.nix  libbcachefs.c  libbcachefs.h  make-release-tarball.sh  mount.fuse.bcachefs  qcow2.c  rustfmt.toml  tools-util.c  tools-util.h
bch_bindgen/: Cargo.toml  build.rs
c_src/: bcachefs.c  cmd_attr.c  cmd_counters.c  cmd_data.c  cmd_device.c  cmd_dump.c  cmd_format.c  cmd_fs.c  cmd_fsck.c  cmd_fusemount.c  cmd_key.c  cmd_kill_btree_node.c  cmd_list_journal.c  cmd_migrate.c  cmd_option.c  cmd_top.c  cmd_version.c  cmds.h  crypto.c  crypto.h  libbcachefs.c  libbcachefs.h  posix_to_bcachefs.c  posix_to_bcachefs.h  qcow2.c  tools-util.c  tools-util.h
checks/: README.md  default.nix  encrypted-multidev.sh  encrypted-unlock.sh  nested.sh  outputs.sh  subvolume.sh
debian/: bcachefs-tools.postinst  bcachefs-tools.postrm  changelog  control  copyright  gbp.conf  rules  watch
doc/: bcachefs-principles-of-operation.tex  bcachefs.5.rst.tmpl
fsck/: .gitignore  bcachefsck@.service.in  bcachefsck_all.in  bcachefsck_all.service.in  bcachefsck_all.timer  bcachefsck_all_fail.service.in  bcachefsck_fail  bcachefsck_fail@.service.in  system-bcachefsck.slice
initramfs/: hook
libbcachefs/: alloc_background.c  alloc_foreground.c  backpointers.c  backpointers.h  bcachefs.h  bcachefs_format.h  bcachefs_ioctl.h  bkey.h  bkey_methods.h  btree_cache.c  btree_gc.c  btree_io.c  btree_iter.c  btree_iter.h  btree_key_cache.c  btree_locking.c  btree_locking.h  btree_node_scan.c  btree_trans_commit.c  btree_types.h  btree_update.c  btree_update_interior.c  btree_update_interior.h  btree_update_leaf.c  btree_write_buffer.c  buckets.c  chardev.c  checksum.c  checksum.h  darray.h  data_update.c  data_update.h  disk_accounting.c  disk_accounting.h  ec.c  ec.h  errcode.h  extents.c  eytzinger.c  fs-common.c  (+49 more)
rust-src/bch_bindgen/: Cargo.toml  build.rs
rust-src/bch_bindgen/src/: bcachefs.rs  bkey.rs  btree.rs  lib.rs  libbcachefs_wrapper.h
(+120 files in other folders)
